--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
                     <ul class="navbar-nav mx-auto">
                         <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="index.html">Home</a></li>
                         <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="about.html">About Me</a></li>
-                        <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="store.html">Tableau</a></li>
+                        <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="Tableau.html">Tableau</a></li>
                     </ul>
                 </div>
             </div>
